<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent2"
        android:padding="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"

            android:id="@+id/title"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"

            />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:id="@+id/cancel_action"
            android:visibility="gone"
            android:background="@drawable/cancel"
            android:padding="@dimen/_5sdp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_car_number"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/sp"
        android:background="@drawable/rounded_edittext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textSize="@dimen/_14sdp"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"
        android:gravity="top"
        android:lines="5"
        android:textSize="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:inputType="textMultiLine"
        android:background="#f7f6f6"
        android:id="@+id/task"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="@dimen/_14sdp"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

      <EditText
          android:id="@+id/start_date"
          android:focusable="false"
          android:layout_height="@dimen/_35sdp"
          android:layout_width="match_parent"
          android:layout_marginEnd="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_3sdp"
          android:textSize="@dimen/_14sdp"
          android:background="@drawable/rounded_edittext" />

  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="@dimen/_14sdp"
            android:textColor="#000"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <EditText
            android:id="@+id/end_date"
            android:layout_height="@dimen/_35sdp"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <Button
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_14sdp"
        android:layout_gravity="center"
        android:text="@string/save"

        android:id="@+id/send"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_btn"/>


</LinearLayout>
</ScrollView>