<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginLeft="@dimen/_7sdp"
    android:layout_marginRight="@dimen/_7sdp"
    android:layout_marginTop="@dimen/_5sdp"
    card_view:cardPreventCornerOverlap="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"


        android:background="@color/white"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Name"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_margin="@dimen/_8sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/arrival"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:id="@+id/arrive_time"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_margin="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/departure" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/dep_time"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="#000" />

            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_margin="@dimen/_8sdp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"

            android:text="@string/send_notification"
            android:id="@+id/send_msg"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/colorAccent3"
            android:background="@drawable/rounded_accent3"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_margin="@dimen/_8sdp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"

                android:text="@string/show_notification"
                android:id="@+id/show_msg"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/rounded_accent"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>