<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"

    card_view:cardPreventCornerOverlap="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/rounded_accent3"
        android:text="Edit"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"

        android:background="@color/white"
        android:orientation="vertical">



 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:layout_weight=".95"
                android:id="@+id/date_time"
                android:textSize="@dimen/_10sdp"
                />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:id="@+id/edit"
        android:textColor="@color/colorAccent"
        android:background="@drawable/rounded_accent"
        android:text="@string/edit"/>
 </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"

                android:id="@+id/task"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"

                android:textSize="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/start_date"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End Date"

                android:textSize="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/end_date"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_number"

                android:textSize="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/car_Number"
                android:textColor="#000"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>